--- a/samples/multiagent/event_planner.ipynb
+++ b/samples/multiagent/event_planner.ipynb
@@ -61,13 +61,13 @@
    "outputs": [],
    "source": [
     "def get_openai_api_key() -> str:\n",
-    "  return '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'\n",
+    "  return ''\n",
     "\n",
     "def get_serper_api_key() -> str:\n",
-    "  return 'a1fe4aaab41aa4810bb7c0dbfd96d2762a60a80e'\n",
+    "  return ''\n",
     "\n",
     "def get_google_api_key() -> str:\n",
-    "  return 'AIzaSyBDqXz4zfuyTzpi0BjG5T-OTAYpVIRmYv8'"
+    "  return ''"
    ]
   },
   {
